@@ -1,3 +1,8 @@
+2019-07-23  Martin Liska  <mliska@suse.cz>
+
+	* dwarf2out.c (gen_producer_string): Canonize -flto=N
+	to -flto in dwarf producer string.
+
 2019-07-23  Richard Biener  <rguenther@suse.de>
 
 	* tree-cfg.c (label_for_bb): Remove global var.
